// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UtilizationDetails shows no-data message when hasTrendData is false and a node is selected 1`] = `
<div>
  <div
    class="cds--inline-notification cds--inline-notification--low-contrast cds--inline-notification--info cds--inline-notification--hide-close-button"
    role="status"
  >
    <div
      class="cds--inline-notification__details"
    >
      <svg
        aria-hidden="true"
        class="cds--inline-notification__icon"
        fill="currentColor"
        focusable="false"
        height="20"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z"
          data-icon-path="inner-path"
          fill="none"
        />
        <path
          d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,6a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"
        />
        <title>
          info icon
        </title>
      </svg>
      <div
        class="cds--inline-notification__text-wrapper"
      >
        <div
          class="cds--inline-notification__title"
          dir="auto"
        >
          No performance data is available for the selected item.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UtilizationDetails shows no-node-selected message when hasTrendData is false and noNodeSelected is true 1`] = `
<div>
  <div
    class="cds--inline-notification cds--inline-notification--low-contrast cds--inline-notification--info cds--inline-notification--hide-close-button"
    role="status"
  >
    <div
      class="cds--inline-notification__details"
    >
      <svg
        aria-hidden="true"
        class="cds--inline-notification__icon"
        fill="currentColor"
        focusable="false"
        height="20"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 32 32"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z"
          data-icon-path="inner-path"
          fill="none"
        />
        <path
          d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,6a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"
        />
        <title>
          info icon
        </title>
      </svg>
      <div
        class="cds--inline-notification__text-wrapper"
      >
        <div
          class="cds--inline-notification__title"
          dir="auto"
        >
          Select a node on the left to view Utilization information.
        </div>
      </div>
    </div>
  </div>
</div>
`;
